Header, Footer, Sample, About, Contact Us page done

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       href="https://cdn.shopify.com/s/files/1/0704/6378/2946/files/aaa.png?v=1713875658"
     />
     <title>
-      Study Wello: Academic Writing Services | Online Help with Money Back
+      StudyHelpers: Academic Writing Services | Online Help with Money Back
       Guarantee
     </title>
   </head>
